third_party/rust/serde_repr/tests/ui/not_enum.stderr
error: input must be an enum
 --> $DIR/not_enum.rs:3:10
  |
3 | #[derive(Serialize_repr)]
  |          ^^^^^^^^^^^^^^

error: aborting due to previous error

